<resources>
    <string name="app_name">ShopTrack</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Log In</string>
    <string name="click_to_register">Sign Up</string>
    <string name="click_to_register_prompt">Don\'t Have an Account?</string>
    <string name="logout">logout</string>
    <string name="shopper">Shopper</string>
    <string name="store_owner">Store Owner</string>
    <string name="welcome">Welcome to ShopTrack!</string>
    <string name="top_brands">Top Brands</string>
    <string name="search">What are you looking for?</string>
    <string name="privacy_policy">
        By signing up, you agree to
        our Terms, Data Policy,
        and Cookies Policy</string>
    <string name="navbar_home">Home</string>
    <string name="navbar_cart">Cart</string>
    <string name="navbar_account">Account</string>
    <string name="navbar_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navbar_mystore"> MyStore</string>
    <string name="store_title">Store Title</string>
    <string name="create_store">Create Store</string>
    <string name="store_image">store_image</string>
    <string name="select_image">select_image</string>
    <string name="create_product">Create Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_name">product_name</string>
    <string name="product_price">product_price</string>
    <string name="product_description">product_description</string>
    <string name="product_image_url">product_image_url</string>
    <string name="add_image">add_image</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="empty_cart">Your cart is empty.</string>
    <string name="clear_cart">Clear </string>
    <string name="submit_cart">Submit</string>
    <string name="total">Total:</string>
    <string name="test">+item</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="ADD2Cart">ADD</string>
    <string name="logout_button">Log Out</string>
    <string name="Fulfill">Fulfill</string>
    <string name="CompleteAll">Fulfill All Orders</string>
    <string name="Status">Status:</string>
    <string name="storeName">store_name</string>
    <string name="Quantity">0</string>
    <string name="order_id">OrderID</string>
    <string name="order_timestamp">01/02/2023</string>
    <string name="hey_user">Hey User</string>


</resources>