<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Product Name Input -->
        <EditText
            android:id="@+id/product_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp" />

        <!-- Product Price Input -->
        <EditText
            android:id="@+id/product_price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:padding="10dp" />

        <!-- Product Description Input -->
        <EditText
            android:id="@+id/product_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:padding="10dp" />

        <!-- Product Image -->
        <ImageView
            android:id="@+id/shopper_product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop" />

        <!-- Add Image Button -->
        <Button
            android:id="@+id/add_image_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/add_image"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <!-- Create Product Button -->
        <Button
            android:id="@+id/create_product_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/create_product"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>
