<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.Login"
    android:background="@drawable/border">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="212dp"
        android:layout_height="235dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/login_email_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo_no_wm" />

    <Button
        android:id="@+id/signup_btn_signup"
        android:layout_width="134dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:strokeColor="@color/black"
        app:strokeWidth="1px" />

    <ImageView
        android:id="@+id/login_email_rounded_box"
        android:layout_width="400dp"
        android:layout_height="68dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/login_email_prompt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_logo"
        app:srcCompat="@drawable/textbox_outline_drawable" />

    <ImageView
        android:id="@+id/login_password_rounded_box"
        android:layout_width="400dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_rounded_box"
        app:srcCompat="@drawable/textbox_outline_drawable" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/enter_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_password_rounded_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_password_rounded_box" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/enter_email"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_email_rounded_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_email_rounded_box" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8" />

    <TextView
        android:id="@+id/login_email_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/email"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/login_email_rounded_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".23"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_logo" />

    <TextView
        android:id="@+id/login_email_prompt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/password"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/login_password_rounded_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_rounded_box" />

    <TextView
        android:id="@+id/signup_prompt"
        android:layout_width="214dp"
        android:layout_height="60dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/privacy_policy"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn_signup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password">

        <RadioButton
            android:id="@+id/radio_shopper"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/dark_blue"
            android:fontFamily="@font/poppins_light"
            android:text="@string/shopper"
            android:textColor="@color/dark_blue" />

        <RadioButton
            android:id="@+id/radio_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/dark_blue"
            android:fontFamily="@font/poppins_light"
            android:text="@string/store_owner"
            android:textColor="@color/dark_blue" />

    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

</androidx.constraintlayout.widget.ConstraintLayout>