<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/welcome_register_btn"
        android:layout_width="149dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/signup"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        app:strokeColor="@color/black"
        app:strokeWidth="1px" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="212dp"
        android:layout_height="235dp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_no_wm" />

    <Button
        android:id="@+id/welcome_login_button"
        android:layout_width="149dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/login"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        app:strokeColor="@color/black"
        app:strokeWidth="1px" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="377dp"
        android:layout_height="53dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.151" />
</androidx.constraintlayout.widget.ConstraintLayout>
